# Advanced-programming-in-C-

./: README.md
01/: readme.md
01/01/: readme.md
01/01/lyambda_fun/: lyambda_fun.sln
01/02/: readme.md
01/02/std_variant/: Task2.cpp  Task2.sln  Task2.vcxproj
01/03/: readme.md
02/: readme.md
02/01/Program with errors/: Program with errors.sln
02/02/: readme.md
02/02/Solid errors/: Solid errors.sln
03/: readme.md
03/01/Smart Array/: Smart Array.sln  Smart Array.vcxproj  Smart Array.vcxproj.filters
03/02/: readme.md
03/02/Copy Smart Array/: Copy Smart Array.sln  Copy Smart Array.vcxproj  Copy Smart Array.vcxproj.filters
04/: readme.md
04/01/: readme.md
04/01/ListTest/: CMakeLists.txt  list.cpp
04/02/ListCheck/: list.cpp
05/: readme.md
05/01/: Squaring.sln
05/01/Squaring/: Squaring.cpp  Squaring.vcxproj  Squaring.vcxproj.filters
05/02/: Table.sln
05/02/Table/: Table.cpp  Table.hpp  Table.vcxproj  Table.vcxproj.filters
05/03/: The number counter.sln  readme.md
05/03/The number counter/: Functor.cpp  Functor.h  The number counter.cpp  (+2 more)
07/: readme.md
07/01/: main.cpp
08/: readme.md
08/01/: A unique vector.sln  readme.md
08/02/: print conteiner.sln
10/: readme.md
10/01/: Cloning a class object.sln
10/02/: Elimination of the intersection.sln
10/03/: unique_ptr with your own hands.sln
11/: readme.md
11/02/: Large numbers.sln
ini parser/: CMakeLists.txt  README.md  main.cpp  test.ini  test2.ini
ini parser/Parse/: Parser.cpp  Parser.h
ini parser/SecondFunk/: SecondaryFunction.cpp  SecondaryFunction.h
(+65 files in other folders)
